--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "liliom/laravel-inbox",
+  "name": "faridbouchdak/laravel-inbox",
   "description": "Laravel messages and inbox system",
   "type": "library",
   "keywords": [
