--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": ">=5.5.9",
+    "laravel/framework": ">=6.*",
     "nesbot/carbon": "^1.26.3"
   },
   "autoload": {
