--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     }
   ],
   "require": {
-    "laravel/framework": ">=6",
+    "php": ">=5.5.9",
+    "illuminate/support": "^6.0",
     "nesbot/carbon": "^1.26.3"
   },
   "autoload": {
